# envoy-wasm-rewrite

./: Cargo.toml  README.md  docker-compose.yaml
envoy/: Dockerfile.proxy  envoy.yaml
src/: lib.rs  rewrite_targets.csv
